--- a/Snake/Snake.vcxproj.filters
+++ b/Snake/Snake.vcxproj.filters
@@ -18,30 +18,30 @@
     <ClCompile Include="SnakeMain.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="drawSth.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="food.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="setting.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="snake.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="func.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="data.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="drawSth.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="food.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="setting.h">
+    <ClInclude Include="snake.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="snake.h">
+    <ClInclude Include="func.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="data.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
