各类独立为文件，实现工程管理

--- a/Snake/Snake.vcxproj
+++ b/Snake/Snake.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="barrier.cpp" />
     <ClCompile Include="func.cpp" />
     <ClCompile Include="food.cpp" />
     <ClCompile Include="data.cpp" />
@@ -26,6 +27,7 @@
     <ClCompile Include="SnakeMain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="barrier.h" />
     <ClInclude Include="func.h" />
     <ClInclude Include="food.h" />
     <ClInclude Include="data.h" />
